Bug 517093 - Arch-Update / CachyOS-Update System Tray context menu pops up in wrong location starting in Plasma 6.6.0
Summary: Arch-Update / CachyOS-Update System Tray context menu pops up in wrong locati...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 6.6.2
Platform: CachyOS Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 517237 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-03-04 16:44 UTC by Oleg
Modified: 2026-03-14 15:09 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.3
Sentry Crash Report:


Attachments
Misaligned Cachy Update popup (243.87 KB, image/png)
2026-03-04 16:44 UTC, Oleg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg 2026-03-04 16:44:11 UTC
Created attachment 190351 [details]
Misaligned Cachy Update popup

SUMMARY
After Plasma 6.6.0 update context menu for Arch(CachyOS) tray applet is being misaligned: it's being drawn way higher than the panel and other popus from tray items.

STEPS TO REPRODUCE
1. Install Arch Update or Cachy Update
2. Launch Arch/CachyOS Update tray applet
3. Try opening its context menu from the tray.

OBSERVED RESULT
Popup will be drawn way higher above the panel

EXPECTED RESULT
Popup should behave just like any other popup for tray items.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.6.2
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Kernel Version: 6.19.5-3-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9800X3D 8-Core Processor
Memory: 64 ГиБ of RAM (62.5 ГиБ usable)
Graphics Processor: AMD Radeon RX 9070 XT
Manufacturer: ASUS

ADDITIONAL INFORMATION
This is a regression starting Plasma 6.6.0. It was working just fine in Plasma 6.5.x and there were no updates to Arch/Cachy Update that might cause this issue.
https://github.com/Antiz96/arch-update/issues/513
https://github.com/CachyOS/distribution/issues/354
Comment 1 Nate Graham 2026-03-04 21:15:52 UTC
Huh, I thought we'd fixed all of these issues but I guess this one slipped through.

I don't use CachyOS though; is there any other app's tray icon that exhibits the problem? The menu for the tray icons of Steam and Discord seem to appear in the right place.
Comment 2 Oleg 2026-03-04 21:17:59 UTC
(In reply to Nate Graham from comment #1)
> I don't use CachyOS though; is there any other app's tray icon that exhibits
> the problem? The menu for the tray icons of Steam and Discord seem to appear
> in the right place.

No, every other app I've tried works just fine: Steam, Sunshine, Jellyfin MPV Shim, KeePassXC, Nicotine, Nextcloud.
Comment 3 Nate Graham 2026-03-04 21:22:56 UTC
So we should fix this on our side, but it sounds like there may also be an issue with the CachyOS widget too. Maybe it hasn't given the menu a parent or something?
Comment 4 Oleg 2026-03-04 21:24:07 UTC
(In reply to Nate Graham from comment #3)
> So we should fix this on our side, but it sounds like there may also be an
> issue with the CachyOS widget too. Maybe it hasn't given the menu a parent
> or something?

People are also experience same issue on vanilla Arch (first link in bug report).
Comment 5 Nate Graham 2026-03-04 21:38:13 UTC
I expect the CachyOS version is forked from the Vanilla Arch version and it's the same issue in both.
Comment 6 Vlad Zahorodnii 2026-03-05 08:38:07 UTC
If you restart plasmashell, is the menu placed correctly?
Comment 7 Robin Candau 2026-03-05 08:39:28 UTC
Hi,

I'm the author / upstream developer of the Arch-Update tool.
Thanks for investigating this!

Here a few answers and additional info I can provide:

The tray icon is written with PyQT6, the code is available here: https://github.com/Antiz96/arch-update/blob/main/src/lib/tray.py
The tray context menu for it used to work just fine (with a correct placement) before Plasma 6.6.0. It also works as expected on any other DE / WM, so this issue (or at least part of it) seems Plasma specific.

> I don't use CachyOS though; is there any other app's tray icon that exhibits the problem? The menu for the tray icons of Steam and Discord seem to appear in the right place.

It indeed appears that the Arch-Update / Cachy-Update tray icon is affected while other tray icons such as Steam and Discord are not. Maybe PyQT6 is also involved in the mix (assuming that the Steam / Discord applet are not written with it)?

> I expect the CachyOS version is forked from the Vanilla Arch version and it's the same issue in both.

Yes indeed.

> So we should fix this on our side, but it sounds like there may also be an issue with the CachyOS widget too. Maybe it hasn't given the menu a parent or something?

It's indeed possible that there's also an issue in the tray applet code somewhere. Although, as said earlier, it used to work just fine before Plasma 6.6.0 and still does on any other DE / WM, so I guess something has changed since Plasma 6.6.0 on that front?

Regarding menu parent, the "main" menu is declared here: https://github.com/Antiz96/arch-update/blob/main/src/lib/tray.py#L381
And is attached to the tray here: https://github.com/Antiz96/arch-update/blob/main/src/lib/tray.py#L409
But it indeed doesn't seem like it has a parent I think? I'm not really a PyQT6 expert I must admit... Anything obvious I should fix here to match Plasma >= 6.6.0 expectations?

I remain available to provide any additional information or test.
Thanks once again :)
Comment 8 Oleg 2026-03-05 16:17:54 UTC
(In reply to Vlad Zahorodnii from comment #6)
> If you restart plasmashell, is the menu placed correctly?

No, if I restart plasmashell it still pops up in wrong location.
Comment 9 TraceyC 2026-03-05 21:10:53 UTC
Setting to confirmed, since Robin was able to reproduce. Thanks!
Comment 10 Robin Candau 2026-03-06 19:16:37 UTC
Ah, a possibly relevant info was reported by a user:
It seems like the context menu is correctly placed if you move the panel / task bar to the top (see https://pasteboard.co/8HIpb3nCp2or.png).
Comment 11 Robin Candau 2026-03-07 06:42:48 UTC
(In reply to Robin Candau from comment #10)
> Ah, a possibly relevant info was reported by a user:
> It seems like the context menu is correctly placed if you move the panel /
> task bar to the top (see https://pasteboard.co/8HIpb3nCp2or.png).

I got the above confirm by other users. See https://github.com/Antiz96/arch-update/issues/513#issuecomment-4013585344 & https://github.com/Antiz96/arch-update/issues/513#issuecomment-4015437562

So this issue only occurs if the task bar panel is place at the bottom, but does not occur if it placed at the top.
Comment 12 agarplayerarlon 2026-03-09 20:51:18 UTC
I've got the exact same issue

https://github.com/CachyOS/linux-cachyos/issues/758#event-23409628890
Comment 13 TraceyC 2026-03-09 22:36:37 UTC
*** Bug 517237 has been marked as a duplicate of this bug. ***
Comment 14 Vlad Zahorodnii 2026-03-10 06:22:08 UTC
It happens randomly on my machine. Most of the times, the popup is placed as expected. But once in a while, the popup gets detached.
Comment 15 Vlad Zahorodnii 2026-03-10 07:00:06 UTC
It looks like the context menu contents is populated asynchronously, which then makes kwin and Qt fight over the global window position. Sometimes Qt wins, and most of the times (on my machine) kwin wins; it will vary per machine though, and if the client changes the system tray menu (it happens a lot with arch-update for some reason) how soon plasmashell will process that.

Given that we shouldn't use absolute positioning, I think there is a way to fix it. I will do some experiments.
Comment 16 Bug Janitor Service 2026-03-10 07:45:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6390
Comment 17 Vlad Zahorodnii 2026-03-10 12:26:01 UTC
Git commit 7681de9182cd9dddc5b71b85a62292072c1f75a6 by Vlad Zahorodnii.
Committed on 10/03/2026 at 11:29.
Pushed by vladz into branch 'master'.

applets/systemtray: Make popup placement on Wayland more robust

Due to how some status notifier popups are populated, both kwin and
plasmashell can fight over the absolute popup position.

In order to play nicer on Wayland, this change makes the system tray
applet opt in for semantic positioning hints in QtWayland.

It also fixes the placement of plasmoid popups so they don't overlap
with their corresponding applet icons.

M  +123  -48   applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7681de9182cd9dddc5b71b85a62292072c1f75a6
Comment 18 Vlad Zahorodnii 2026-03-10 13:33:45 UTC
Git commit 2c65eeb252ff3c38109529ee0bba5e2897c851df by Vlad Zahorodnii.
Committed on 10/03/2026 at 12:31.
Pushed by vladz into branch 'Plasma/6.6'.

applets/systemtray: Make popup placement on Wayland more robust

Due to how some status notifier popups are populated, both kwin and
plasmashell can fight over the absolute popup position.

In order to play nicer on Wayland, this change makes the system tray
applet opt in for semantic positioning hints in QtWayland.

It also fixes the placement of plasmoid popups so they don't overlap
with their corresponding applet icons.
(cherry picked from commit 7681de9182cd9dddc5b71b85a62292072c1f75a6)

M  +123  -48   applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/2c65eeb252ff3c38109529ee0bba5e2897c851df
Comment 19 Robin Candau 2026-03-10 19:31:03 UTC
Thanks for the fix in https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6390 :)
However, I backported it on top of plasma-workspace 6.6.2 and there is still one odd behavior. The very first time you open the context menu, it still gets misplaced but is now extended to the taskbar. See screenshot here: https://pasteboard.co/EsUdd0BzPsgJ.png
I got this confirmed by someone else, for what it's worth.

Note that this only occurs the very first time you open the context menu after boot / plasma shell start. The next opening looks fine though.
Comment 20 Vlad Zahorodnii 2026-03-10 21:39:33 UTC
Hmm I'm unable to reproduce it. Does it happen if the panel is at the top screen edge?
Comment 21 Vlad Zahorodnii 2026-03-11 09:39:28 UTC
I managed to reproduce it with 6.6.2. It looks like you need to have only one output.
Comment 22 Vlad Zahorodnii 2026-03-12 18:47:37 UTC
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6404 as a short term fix. I created a Qt patch as a more proper fix.
Comment 23 Robin Candau 2026-03-13 08:10:50 UTC
(In reply to Vlad Zahorodnii from comment #22)
> https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6404 as a
> short term fix. I created a Qt patch as a more proper fix.

Thanks for your quick actions! :)
Comment 24 Vlad Zahorodnii 2026-03-14 15:03:05 UTC
(In reply to Robin Candau from comment #23)
> (In reply to Vlad Zahorodnii from comment #22)
> > https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6404 as a
> > short term fix. I created a Qt patch as a more proper fix.
> 
> Thanks for your quick actions! :)

Anything for my Arch Linux comrades. :)
Comment 25 Robin Candau 2026-03-14 15:09:54 UTC
(In reply to Vlad Zahorodnii from comment #24)
> (In reply to Robin Candau from comment #23)
> > (In reply to Vlad Zahorodnii from comment #22)
> > > https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6404 as a
> > > short term fix. I created a Qt patch as a more proper fix.
> > 
> > Thanks for your quick actions! :)
> 
> Anything for my Arch Linux comrades. :)

🫡