applets/systemtray: Make popup placement on Wayland more robust

Due to how some status notifier popups are populated, both kwin and
plasmashell can fight over the absolute popup position.

In order to play nicer on Wayland, this change makes the system tray
applet opt in for semantic positioning hints in QtWayland.

It also fixes the placement of plasmoid popups so they don't overlap
with their corresponding applet icons.

BUG: 517093
(cherry picked from commit 7681de9182cd9dddc5b71b85a62292072c1f75a6)